修正编辑器无法全屏的问题

--- a/www/static/src/admin/component/post_create/style.css
+++ b/www/static/src/admin/component/post_create/style.css
@@ -18,6 +18,9 @@
   height: 550px;
 }
 
+.md-panel.fullscreen {
+  height: auto;
+}
 /** 文章编辑右侧 **/
 .post-create .col-xs-3 > div.button-group {
   margin-top: 25px;
