--- a/www/static/src/admin/component/post_create/style.css
+++ b/www/static/src/admin/component/post_create/style.css
@@ -21,6 +21,11 @@
 .md-panel.fullscreen {
   height: auto;
 }
+
+.rc-select-dropdown-menu {
+  max-height: 200px;
+  overflow: hidden;
+}
 /** 文章编辑右侧 **/
 .post-create .col-xs-3 > div.button-group {
   margin-top: 25px;
