--- a/view/home/index_install.html
+++ b/view/home/index_install.html
@@ -32,29 +32,29 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>帐号</label>
-          <input type="text" name="db_account" required class="form-control" placeholder="数据库帐号">
+          <input type="text" name="db_account" value="{{data.db_account}}" required class="form-control" placeholder="数据库帐号">
         </div>
         <div class="form-group">
           <label>密码</label>
-          <input type="password" name="db_password" class="form-control"  placeholder="数据库密码">
+          <input type="password" name="db_password" value="{{data.db_password}}" class="form-control"  placeholder="数据库密码">
         </div>
         <div class="form-group">
           <label>数据库名</label>
-          <input type="text" required name="db_name" value="firekylin" class="form-control"  placeholder="数据库名">
+          <input type="text" required name="db_name" value="{{data.db_name}}" value="firekylin" class="form-control"  placeholder="数据库名">
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
           <label>主机</label>
-          <input type="text" name="db_host" class="form-control" placeholder="数据库主机地址">
+          <input type="text" name="db_host" value="{{data.db_host}}" class="form-control" placeholder="数据库主机地址">
         </div>
         <div class="form-group">
           <label>端口</label>
-          <input type="text" name="db_port" class="form-control" value="3306"  placeholder="数据库端口">
+          <input type="text" name="db_port" value="{{data.db_port}}" class="form-control" value="3306"  placeholder="数据库端口">
         </div>
         <div class="form-group">
           <label>表前缀</label>
-          <input type="text" name="db_table_prefix" required class="form-control" value="fk_"  placeholder="数据表前缀">
+          <input type="text" name="db_table_prefix" value="{{data.db_table_prefix}}" required class="form-control" value="fk_"  placeholder="数据表前缀">
         </div>
       </div>
     </div>
@@ -65,13 +65,13 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>帐号</label>
-          <input type="text" required name="username" class="form-control" value="admin" placeholder="管理后台帐号">
+          <input type="text" required name="username" value="{{data.username}}" class="form-control" value="admin" placeholder="管理后台帐号">
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
           <label>密码</label>
-          <input type="password" required name="password" class="form-control" placeholder="密码">
+          <input type="password" required name="password" value="{{data.password}}" class="form-control" placeholder="密码">
           <p class="help-block">密码长度至少8位，最好使用字母、数字、特殊字符等组合</p>
         </div>
       </div>
