添加右侧边距

--- a/www/theme/firekylin/res/css/base.css
+++ b/www/theme/firekylin/res/css/base.css
@@ -46,6 +46,7 @@ body.side {
 #main {
   background-color: #fff;
   padding-left: 290px;
+  padding-right: 40px;
   max-width: 1390px;
   -webkit-overflow-scrolling: touch;
 }
