--- a/www/theme/firekylin/res/css/footer.css
+++ b/www/theme/firekylin/res/css/footer.css
@@ -1,8 +1,7 @@
 #footer {
   line-height:1.8;
   text-align:center;
-  width:auto;
-  padding:15px 70px 15px 40px;
+  padding:15px;
   border-top:1px solid #fff;
   font-size:.9em;
 }
