--- a/www/theme/firekylin/res/css/article.css
+++ b/www/theme/firekylin/res/css/article.css
@@ -78,6 +78,7 @@ article blockquote {
   padding:15px 20px;
   border-left:5px solid #2479CC;
   background-color: #f8f8f8;
+  margin-left: 0;
 }
 
 article code {
