新增缓存策略，新增后台文章列表搜索

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -130,6 +130,8 @@ ul,ol{padding:0;list-style:none;}
 .fk-footer.active{margin-left: 0;}
 .fk-footer p{font-size:12px;}
 
+
+
 /*右侧公共部分*/
 .fk-content-wrap .mod-symbol{margin-left:-2px;padding:0;width:2px;text-align:center;font-size:22px;line-height:35px;}
 #remove_user_form{border-bottom: 1px solid #e5e5e5}
@@ -203,6 +205,35 @@ textarea{resize:none;}
 .fk-question-list li,.fk-article-list li{overflow: hidden;margin-bottom: 5px;}
 .fk-article-list a,.fk-question-list a{display:block;max-width:600px;}
 
+/*右侧搜索*/
+.fk-search{
+	height: 30px;
+	width: 100%;
+	border: 1px solid #c8c8d5;
+    border-radius: 4px;
+    padding: 4px;
+    margin-bottom: 10px;
+    position: relative;
+}
+.fk-search-input{
+	width: 100%;
+	padding: 0;
+	border: none;
+}
+.fk-search-btn{
+    border: none;
+    height: 28px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+}
+.fk-search-btn:before{
+	position: absolute;
+	top: 7px;
+	left: 10px;
+	content: "\e604";
+}
 
 /*.chat-symbol{padding:0;line-height:34px;}
 .fk-wechat-dropdown-box{position:relative;width:230px;height:34px;line-height:34px;}
