--- a/view/home/index_install.html
+++ b/view/home/index_install.html
@@ -27,7 +27,7 @@
       <div class="alert alert-danger" role="alert">{{message}}</div>
       {% endif %}
     {% endif %}
-    <h3>数据库信息</h3>
+    <h3>数据库信息（MySQL）</h3>
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
