--- a/view/home/index_install.html
+++ b/view/home/index_install.html
@@ -71,7 +71,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>密码</label>
-          <input type="password" required name="password" value="{{data.password}}" class="form-control" placeholder="密码">
+          <input type="text" required name="password" value="{{data.password}}" class="form-control" placeholder="密码">
           <p class="help-block">密码长度至少8位，最好使用字母、数字、特殊字符等组合</p>
         </div>
       </div>
