增加 firekylin 推送安装版脚本同时增加新版本检测功能

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -235,7 +235,15 @@ textarea{resize:none;}
 	left: 10px;
 	content: "\e604";
 }
-
+.fk-new-verstion {
+	margin-left: 10px;
+	animation: bling .5s infinite;
+}
+@keyframes bling {
+	from {opacity: 1;}
+	50% {opacity: 0;}
+	to {opacity: 1;}
+}
 /*.chat-symbol{padding:0;line-height:34px;}
 .fk-wechat-dropdown-box{position:relative;width:230px;height:34px;line-height:34px;}
 .fk-wechat-dropdown-box input{padding-right:30px!important;}
