--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -235,14 +235,13 @@ textarea{resize:none;}
 	left: 10px;
 	content: "\e604";
 }
-.fk-new-verstion {
-	margin-left: 10px;
-	animation: bling .5s infinite;
+
+.fk-dragable-row {
+					user-select: none;
+	-webkit-user-select: none;
 }
-@keyframes bling {
-	from {opacity: 1;}
-	50% {opacity: 0;}
-	to {opacity: 1;}
+.fk-dragable-item:hover {
+	cursor: move;
 }
 /*.chat-symbol{padding:0;line-height:34px;}
 .fk-wechat-dropdown-box{position:relative;width:230px;height:34px;line-height:34px;}
