--- a/view/home/index_contributor.html
+++ b/view/home/index_contributor.html
@@ -12,7 +12,7 @@
 <body>
  <div class="container">
   <div class="header clearfix">
-    <h3 class="text-muted">Firekylin - 申请成功投稿者</h3>
+    <h3 class="text-muted">Firekylin - 投稿者申请</h3>
   </div>
 </div>
 <div class="container">
