冻结用户信息防止更改

--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 <script>
-window.SysConfig = {
+window.SysConfig = Object.freeze({
   userInfo: {{JSON.stringify(userInfo) | safe}},
   options: {{JSON.stringify(options) | safe}},
-}
+});
 </script>
 <div id="app"></div>
 <script src="/static/js/common.js"></script>
