--- a/www/theme/firekylin/res/css/responsive.css
+++ b/www/theme/firekylin/res/css/responsive.css
@@ -8,9 +8,27 @@
     transition: all .2s cubic-bezier(.4,.01,.165,.99);
     display: block;
   }
+  #header a.me {
+    display: none;
+  }
 }
 
 @media screen and (max-width:768px) {
+  #sidebar {
+    width: 250px;
+    height: 100%;
+    background-color: #202020;
+  }
+  #sidebar .buttons {
+    margin: 0 0 20px;
+  }
+  #sidebar .buttons li {
+    display: block;
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    font-size: 16px;
+  }
   #sidebar.behavior_1 {
     -webkit-transform: translate3D(-250px,0,0);
     -ms-transform: translate3D(-250px,0,0);
@@ -31,14 +49,20 @@
     padding-top: 20px;
     padding-bottom: 20px;
   }
-  #sidebar .profile a,
+  #sidebar .profile a {
+    width: 128px;
+  }
   #sidebar .profile img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
+    max-width: 100%;
   }
   #sidebar .profile span {
     display: none;
+  }
+  #sidebar .buttons li {
+    text-align: center;
+  }
+  #sidebar .buttons li a {
+    padding-left: 0;
   }
 }
 
