--- a/www/theme/firekylin/res/css/sidebar.css
+++ b/www/theme/firekylin/res/css/sidebar.css
@@ -1,14 +1,10 @@
-
 #sidebar {
-  width: 250px;
-  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
-  background-color: #202020;
   overflow: auto;
   z-index: 1;
-  -webkit-overflow-scrolling: touch;
+  box-shadow: 2px 1px 6px rgb(233, 226, 226);
 }
 #sidebar li,
 #sidebar ul {
@@ -16,37 +12,17 @@
   padding: 0;
   list-style: none;
 }
-#sidebar .profile {
-  padding-top: 40px;
-  padding-bottom: 10px;
-}
-#sidebar .profile a,
-#sidebar .profile img {
-  width: 140px;
-  height: 140px;
-  border-radius: 70px;
-  overflow: hidden;
-}
+
 #sidebar .profile a {
   display: block;
   margin: 0 auto;
 }
 #sidebar .profile span {
-  display: block;
+  display: none;
   padding: 10px 0;
   font-size: 18px;
   color: #999;
   text-align: center;
-}
-#sidebar .buttons {
-  margin: 0 0 20px;
-}
-#sidebar .buttons li {
-  display: block;
-  width: 100%;
-  height: 45px;
-  line-height: 45px;
-  font-size: 16px;
 }
 #sidebar .buttons li a {
   padding-left: 25px;
@@ -56,7 +32,10 @@
   transition: color .2s cubic-bezier(.4,.01,.165,.99);
   text-decoration: none;
 }
-#sidebar .buttons li a i,
+#sidebar .mod-menu li a i {
+  display: none;
+}
+#sidebar .mod-search li a i,
 #sidebar .buttons li a span {
   display: inline-block;
   vertical-align: middle;
@@ -67,7 +46,6 @@
   height: 45px;
   line-height: 45px;
   text-align: center;
-  margin-right: 20px;
 }
 #sidebar .buttons li a:hover {
   color: rgba(153,153,153,.8);
@@ -86,4 +64,47 @@
   overflow: hidden;
   display: none;
   background-color: rgba(255,255,255,0);
+}
+
+@media screen and (min-width:768px) {
+  #sidebar {
+    width: 100%;
+    height: 72px;
+    background-color: #fff;
+  }
+  #sidebar .wrap {
+    max-width: 1080px;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  #sidebar .profile {
+    float: left;
+  }
+  #sidebar .buttons {
+    float: left;
+  }
+  #sidebar .buttons li {
+    display: inline-block;
+    height: 72px;
+    line-height: 72px;
+    font-size: 16px;
+  }
+  #sidebar .profile a {
+    margin: 15px 0;
+    width: 128px;
+  }
+  #sidebar .profile img {
+    max-width: 100%;
+  }
+  #sidebar .mod-menu {
+    margin-left: 40px;
+  }
+
+  #sidebar .mod-menu li a {
+    padding: 0 15px;
+  }
+
+  #sidebar .mod-quick {
+    float: right;
+  }
 }
