--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -36,6 +36,7 @@ ul,ol{padding:0;list-style:none;}
 .options-general{max-width: 600px;}
 .options-comment{max-width: 600px;}
 .options-comment .form-group{padding-left: 1px;}
+.options-upload{max-width: 600px;}
 .form-group {overflow: hidden;}
 .options-2fa{max-width: 600px;}
 .options-2fa ul li {list-style-type: disc;margin-left: 18px;}
