--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -17,6 +17,6 @@ window.SysConfig = {
 </script>
 <div id="app"></div>
 <script src="/static/js/common.js"></script>
-<script src="/static/js/admin.bundle.js"></script>
+<script src="/static/js/admin.js"></script>
 </body>
 </html>
