--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -40,6 +40,7 @@ ul,ol{padding:0;list-style:none;}
 .form-group {overflow: hidden;}
 .options-2fa{max-width: 600px;}
 .options-2fa ul li {list-style-type: disc;margin-left: 18px;}
+.options-import{max-width: 600px;}
 
 #app,.fk{height: 100%;}
 /* 警告提示box */
