--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -33,14 +33,10 @@ ul,ol{padding:0;list-style:none;}
 .user-create{width: 700px;}
 .user-create .pull-left{width: 44%;margin-right: 6%}
 .fk-alert{position: fixed;top: 8px;min-width: 200px;left: 50%;margin-left: -100px;text-align: center;}
-.options-general{max-width: 600px;}
-.options-comment{max-width: 600px;}
+.options-general, .options-reading, .options-comment, .options-upload, .options-2fa, .options-import {max-width: 600px;}
 .options-comment .form-group{padding-left: 1px;}
-.options-upload{max-width: 600px;}
 .form-group {overflow: hidden;}
-.options-2fa{max-width: 600px;}
 .options-2fa ul li {list-style-type: disc;margin-left: 18px;}
-.options-import{max-width: 600px;}
 
 #app,.fk{height: 100%;}
 /* 警告提示box */
