后台添加在线编辑主题功能

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -606,3 +606,6 @@ div.pipe:after, .pipe>.half:before, .pipe>.half:after  {
     margin-left: 5px;
     color: #AAA;
 }
+.theme-editor .CodeMirror {
+    height: 600px;
+}
