fix #223 小屏描点被遮挡

--- a/www/theme/firekylin/res/css/article.css
+++ b/www/theme/firekylin/res/css/article.css
@@ -261,3 +261,8 @@ article.tags section a:hover {
   color: #2479CC;
   border-color: #2479CC;
 }
+a.anchor {
+  display: block;
+  position: relative;
+  visibility: hidden;
+}
