post list page add cate select filter

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -205,15 +205,21 @@ textarea{resize:none;}
 .fk-article-list a,.fk-question-list a{display:block;max-width:600px;}
 
 /*右侧搜索*/
+.fk-post-search {
+    position: absolute;
+    right: 20px;
+}
+.fk-post-search>.form-group:first-child {
+    margin-right: 10px;
+}
 .fk-search{
-	height: 30px;
-	width: 275px;
-	border: 1px solid #c8c8d5;
-  border-radius: 4px;
-  padding: 4px;
-  margin-bottom: 10px;
-  position: absolute;
-	right: 20px;
+    height: 30px;
+    width: 275px;
+    border: 1px solid #c8c8d5;
+    border-radius: 4px;
+    padding: 4px;
+    margin-bottom: 10px;
+    position: relative;
 }
 .fk-search-input{
 	width: 100%;
