post list search add cate parameter front

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -233,6 +233,7 @@ textarea{resize:none;}
     right: 0;
     top: 0;
     width: 40px;
+    background: none;
 }
 .fk-search-btn:before{
 	position: absolute;
