Fix #310. Added Edit functionailities to navigation items.

--- a/www/static/css/admin.css
+++ b/www/static/css/admin.css
@@ -3,6 +3,7 @@
 .tooltip.top .tooltip-arrow{border-top-color:#246594;}
 .nav-tabs > li > a:hover{border-color:transparent;}
 .table{margin-bottom:0;}
+.table tr td .form-group{margin-bottom:0;}
 .radio-inline,label.checkbox-inline{margin:0 15px 0 0;padding:0;}
 .radio-inline + .radio-inline,.checkbox-inline + .checkbox-inline{margin-left:0;}
 .nav > li > a:hover,.nav > li > a:focus{background-color:transparent;}
