--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>{{options.title}}</title>
+  <link rel="icon" href="{{options.favicon_url |default('/static/img/firekylin.jpg')}}">
   <link rel="stylesheet" href="/static/module/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="/static/css/admin.css">
   <link rel="stylesheet" href="/static/css/icon.css">
