--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -15,7 +15,7 @@ window.SysConfig = {
   userInfo: {{JSON.stringify(userInfo) | safe}},
   options: {{JSON.stringify(options) | safe}},
   config: {
-    disallow_file_edit: {{think.config('DISALLOW_FILE_EDIT')}}
+    disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %}true{% else %}false{% endif %}
   }
 };
 </script>
