--- a/www/static/src/routes/container.less
+++ b/www/static/src/routes/container.less
@@ -1,24 +1,6 @@
-.App {
-  text-align: center;
+.content {
+  margin: 0 0 0 235px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.breadcrumb {
+  margin-left: 235px;
 }
