--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +10,28 @@
   <link rel="stylesheet" href="/static/css/admin.css">
   <link rel="stylesheet" href="/static/css/icon.css">
 </head>
+
 <body>
-<script>
-window.SysConfig = {
-  userInfo: {{JSON.stringify(userInfo) | safe}},
-  options: {{JSON.stringify(options) | safe}},
-  config: {
-    disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %}true{% else %}false{% endif %}
-  }
-};
-</script>
-<div id="app"></div>
-<script src="/static/js/common.js"></script>
-<script src="/static/js/admin.js"></script>
+  <script>
+    {% if userInfo.id %}
+    window.SysConfig = {
+      userInfo: {{ JSON.stringify(userInfo) | safe }},
+      options: {{ JSON.stringify(options) | safe }},
+      config: {
+        disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %} true{% else %} false{% endif %}
+      }
+    };
+    {% else %}
+    window.SysConfig = { userInfo: {}, options: {
+      title: "{{options.title}}",
+      two_factor_auth: "{{options.two_factor_auth}}",
+      password_salt: "{{options.password_salt}}"
+    }, config: {} };
+    {% endif %}
+  </script>
+  <div id="app"></div>
+  <script src="/static/js/common.js"></script>
+  <script src="/static/js/admin.js"></script>
 </body>
+
 </html>
