--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -13,20 +13,21 @@
 
 <body>
   <script>
-    {% if userInfo.id %}
-    window.SysConfig = {
-      userInfo: {{ JSON.stringify(userInfo) | safe }},
-      options: {{ JSON.stringify(options) | safe }},
-      config: {
-        disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %} true{% else %} false{% endif %}
-      }
-    };
+    {% if true %}
+      window.SysConfig = {
+        userInfo: {{ JSON.stringify(userInfo) | safe }},
+        options: {{ JSON.stringify(options) | safe }},
+        config: {
+          disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %} true{% else %} false{% endif %}
+        }
+      };
     {% else %}
-    window.SysConfig = { userInfo: {}, options: {
-      title: "{{options.title}}",
-      two_factor_auth: "{{options.two_factor_auth}}",
-      password_salt: "{{options.password_salt}}"
-    }, config: {} };
+      window.SysConfig = { userInfo: {}, options: {
+        title: "{{options.title}}",
+        two_factor_auth: {{options.two_factor_auth}},
+        password_salt: "{{options.password_salt}}",
+        ldap_on: "{{options.ldap_on}}"
+      }, config: {} };
     {% endif %}
   </script>
   <div id="app"></div>
