fix word mistake

--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -13,7 +13,7 @@
 
 <body>
   <script>
-    {% if true %}
+    {% if userInfo.id %}
       window.SysConfig = {
         userInfo: {{ JSON.stringify(userInfo) | safe }},
         options: {{ JSON.stringify(options) | safe }},
