fix intranet config bug

--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -26,7 +26,8 @@
         title: "{{options.title}}",
         two_factor_auth: {{options.two_factor_auth}},
         password_salt: "{{options.password_salt}}",
-        ldap_on: "{{options.ldap_on}}"
+        ldap_on: "{{options.ldap_on}}",
+        intranet: {{options.intranet}}
       }, config: {} };
     {% endif %}
   </script>
