--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -13,23 +13,13 @@
 
 <body>
   <script>
-    {% if userInfo.id %}
-      window.SysConfig = {
-        userInfo: {{ JSON.stringify(userInfo) | safe }},
-        options: {{ JSON.stringify(options) | safe }},
-        config: {
-          disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %} true{% else %} false{% endif %}
-        }
-      };
-    {% else %}
-      window.SysConfig = { userInfo: {}, options: {
-        title: "{{options.title}}",
-        two_factor_auth: {{options.two_factor_auth}},
-        password_salt: "{{options.password_salt}}",
-        ldap_on: "{{options.ldap_on}}",
-        intranet: {{options.intranet}}
-      }, config: {} };
-    {% endif %}
+    window.SysConfig = {
+      userInfo: {{ userInfo | dump('\t') | safe}},
+      options: {{ options | dump('\t') | safe | replace('<', '\\<') | replace('>', '\\>')}},
+      config: {
+        disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %} true{% else %} false{% endif %}
+      }
+    };
   </script>
   <div id="app"></div>
   <script src="/static/js/common.js"></script>
