refactor(admin/editor): update link

--- a/www/static/src/app.less
+++ b/www/static/src/app.less
@@ -14,3 +14,14 @@
         margin-bottom: 15px;
     }
 }
+// Reset Ant Design Style
+.ant-modal {
+    .ant-modal-body {
+        padding: 0;
+    }
+}
+.ant-form {
+    .ant-row {
+        margin-bottom: 15px;
+    }
+}
