feat(admin/appearance): add navigation page

--- a/www/static/src/app.less
+++ b/www/static/src/app.less
@@ -25,3 +25,10 @@
         margin-bottom: 15px;
     }
 }
+
+a.a-button-danger, a.a-button-danger:link, a.a-button-danger:visited {
+    color: #f5222d;
+}
+a.a-button-danger:hover, a.a-button-danger:active {
+    color: #ff4d4f;
+}
