--- a/www/static/src/app.less
+++ b/www/static/src/app.less
@@ -32,3 +32,14 @@ a.a-button-danger, a.a-button-danger:link, a.a-button-danger:visited {
 a.a-button-danger:hover, a.a-button-danger:active {
     color: #ff4d4f;
 }
+
+.ant-btn-success {
+    background-color: #5cb85c !important;
+    border-color: #449d44 !important;
+    color: white !important;
+}
+.ant-btn-success.disabled, .ant-btn-success[disabled], .ant-btn-success.disabled:hover, .ant-btn-success[disabled]:hover, .ant-btn-success.disabled:focus, .ant-btn-success[disabled]:focus, .ant-btn-success.disabled:active, .ant-btn-success[disabled]:active, .ant-btn-success.disabled.active, .ant-btn-success[disabled].active {
+    color: rgba(0, 0, 0, 0.25) !important;
+    background-color: #f5f5f5 !important;
+    border-color: #d9d9d9 !important;
+}
