feat(admin/options): add components

--- a/www/static/src/app.less
+++ b/www/static/src/app.less
@@ -9,6 +9,9 @@
     padding: 15px;
     background-color: white;
 }
+.page-title {
+    margin-bottom: 20px;
+}
 
 .page-create {
     .ant-form-item {
