--- a/www/static/src/app.less
+++ b/www/static/src/app.less
@@ -11,6 +11,12 @@
         margin-bottom: 15px;
     }
 }
+.has-error {
+    border-color: #f5222d !important;
+}
+.has-error:focus {
+    box-shadow: 0 0 0 2px rgba(245,34,45,.2);
+}
 // Reset Ant Design Style
 .ant-modal {
     .ant-modal-body {
