--- a/www/static/src/components/article/article-header/article-header.less
+++ b/www/static/src/components/article/article-header/article-header.less
@@ -10,4 +10,10 @@
         }
     }
     margin-bottom: 15px;
+    .has-error {
+        border-color: #f5222d !important;
+    }
+    .has-error:focus {
+        box-shadow: 0 0 0 2px rgba(245,34,45,.2);
+    }
 }
