build(admin): use dynamic import

--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -20,7 +20,7 @@ window.SysConfig = {
 };
 </script>
 <div id="app"></div>
-<script src="/static/js/vendor.chunk.js"></script>
 <script src="/static/js/admin.js"></script>
+<script src="/static/js/commons~admin.js"></script>
 </body>
 </html>
