--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -21,6 +21,6 @@ window.SysConfig = {
 </script>
 <div id="app"></div>
 <script src="/static/js/admin.js"></script>
-<script src="/static/js/commons~admin.js"></script>
+<script src="/static/js/vendor.js"></script>
 </body>
 </html>
