--- a/view/admin/index_index.html
+++ b/view/admin/index_index.html
@@ -15,7 +15,13 @@
 <script>
 window.SysConfig = {
   userInfo: {{JSON.stringify(userInfo) | safe}},
-  options: {{JSON.stringify(options) | safe}},
+  options: {{JSON.stringify({
+    title: options.title,
+    two_factor_auth: options.two_factor_auth,
+    ldap_on: options.ldap_on,
+    intranet: options.intranet,
+    password_salt: options.password_salt
+  }) | safe}},
   config: {
     disallow_file_edit: {% if think.config('DISALLOW_FILE_EDIT') %}true{% else %}false{% endif %}
   }
